fixed homepage image covering header

--- a/src/pages/styles/contact.css
+++ b/src/pages/styles/contact.css
@@ -21,7 +21,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	margin-top: 120px;
+	margin-top: 80px;
 }
 
 
@@ -35,4 +35,12 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+}
+
+.contact-link{
+	text-decoration: none;
+	background-color: var(--link-color);
+	padding: 2px 4px;
+	border-radius: 5px;
+	color: var(--quaternary-color);
 }
